--- a/choose/css/style.css
+++ b/choose/css/style.css
@@ -25,6 +25,9 @@
     font-size: 20px;
 }
 
+#choose{
+    overflow-x: hidden;
+}
 .ball {
     position: absolute;
     border-radius: 100%;
@@ -34,5 +37,6 @@
     height: 100%;
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
   }
   
